--- a/mcp_notes.ipynb
+++ b/mcp_notes.ipynb
@@ -11,7 +11,38 @@
     "\n",
     "# Key Concepts and Terminology\n",
     "\n",
-    "MCP is often "
+    "MCP is often described as the \"USC=C for AI applications.\" Just as USB-C provides a standardized physical and logical interface for connecting various peripherals to computing devices, MCP offers a consistent protocol for linking AI models to external capabilities. This standardization benefits the entire ecosystem:\n",
+    "* users enjoy simpler and more consistent experiences across AI applications\n",
+    "* AI application developers gain easy integration with a growing ecosystem of tools and data sources\n",
+    "* tool and data providers need only create a single implementation that works with multiple AI applications\n",
+    "* the broader ecosystem benefits from increased interoperability, innovation, and reduced fragmentation\n",
+    "\n",
+    "## The Integration Problem\n",
+    "\n",
+    "The **MxN Integration Problem** refers to the challenge of connecting M different AI applications to N different external tools or data sources without a standardized approach.\n",
+    "\n",
+    "## Without MCP (M×N Problem)\n",
+    "\n",
+    "Without a protocol like MCP, developers would need to create M×N custom integrations—one for each possible pairing of an AI application with an external capability.\n",
+    "\n",
+    "Each AI application would need to integrate with each tool/data source individually. This is a very complex and expensive process which introduces a lot of friction for developers, and high maintenance costs.\n",
+    "\n",
+    "Once we have multiple models and multiple tools, the number of integrations becomes too large to manage, each with its own unique interface.\n",
+    "\n",
+    "## With MCP (M+N Solution)\n",
+    "\n",
+    "MCP transforms this into an M+N problem by providing a standard interface: each AI application implements the client side of MCP once, and each tool/data source implements the server side once. This dramatically reduces integration complexity and maintenance burden.\n",
+    "\n",
+    "## Core MCP Terminology\n",
+    "\n",
+    "MCP is a standard like HTTP or USB-C, and is a protocol for connecting AI applications to external tools and data sources. Therefore, using standard terminology is crucial to making the MCP work effectively.\n",
+    "\n",
+    "When documenting our applications and communicating with the community, we should use the following terminology.\n",
+    "\n",
+    "Just like client server relationships in HTTP, MCP has a client and a server.\n",
+    "\n",
+    "* **Host:** The user-facing AI application that end-users interact with directly. Examples include Anthropic’s Claude Desktop, AI-enhanced IDEs like Cursor, inference libraries like Hugging Face Python SDK, or custom applications built in libraries like LangChain or smolagents. Hosts initiate connections to MCP Servers and orchestrate the overall flow between user requests, LLM processing, and external tools.\n",
+    "\n"
    ]
   }
  ],
