--- a/mcp_notes.ipynb
+++ b/mcp_notes.ipynb
@@ -42,7 +42,26 @@
     "Just like client server relationships in HTTP, MCP has a client and a server.\n",
     "\n",
     "* **Host:** The user-facing AI application that end-users interact with directly. Examples include Anthropic’s Claude Desktop, AI-enhanced IDEs like Cursor, inference libraries like Hugging Face Python SDK, or custom applications built in libraries like LangChain or smolagents. Hosts initiate connections to MCP Servers and orchestrate the overall flow between user requests, LLM processing, and external tools.\n",
-    "\n"
+    "\n",
+    "* **Client:** A component within the host application that manages communication with a specific MCP Server. Each Client maintains a 1:1 connection with a single Server, handling the protocol-level details of MCP communication and acting as an intermediary between the Host’s logic and the external Server.\n",
+    "\n",
+    "* **Server:** An external program or service that exposes capabilities (Tools, Resources, Prompts) via the MCP protocol.\n",
+    "\n",
+    "[Terminology](https://huggingface.co/learn/mcp-course/en/unit1/key-concepts#capabilities)\n",
+    "\n",
+    "**Then there's a bunch of other stuff you're better off just reading instead of typing along to.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4a28de52",
+   "metadata": {},
+   "source": [
+    "# The Communication Protocol\n",
+    "\n",
+    "MCP defines a standardized communication protocol that enables Clients and Servers to exchange messages in a consistent, predictable way. This standardization is critical for interoperability across the community.\n",
+    "\n",
+    "## JSON-RPC: The Foundation"
    ]
   }
  ],
