Added requirements and some notes and example

--- a/mcp_notes.ipynb
+++ b/mcp_notes.ipynb
@@ -61,8 +61,75 @@
     "\n",
     "MCP defines a standardized communication protocol that enables Clients and Servers to exchange messages in a consistent, predictable way. This standardization is critical for interoperability across the community.\n",
     "\n",
-    "## JSON-RPC: The Foundation"
+    "## JSON-RPC: The Foundation\n",
+    "\n",
+    "At its core, MCP uses **JSON-RPC 2.0** as the message format for all communication between clients and servers. JSON-RPC is a lightweight remote procedure call protocol encoded in JSON, which makes it:\n",
+    "* Human-readable and easy to debug\n",
+    "* Language-agnostic, supporting implementation in any programming environment\n",
+    "* Well-established, with clear specifications and widespread adoption\n",
+    "\n",
+    "The protocol defines three types of messages:\n",
+    "\n",
+    "### Requests\n",
+    "\n",
+    "Sent from Client to Server to initiate an operation. A request message includes:\n",
+    "* A unique ID (`id`)\n",
+    "* The method name to invoke (e.g. `tools/call`)\n",
+    "* Parameters for the method (if any)\n",
+    "\n",
+    "Example request:"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "3e717144",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'requests'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mjson\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mrequests\u001b[39;00m\n\u001b[32m      4\u001b[39m request = {\n\u001b[32m      5\u001b[39m     \u001b[33m'\u001b[39m\u001b[33mjsonrpc\u001b[39m\u001b[33m'\u001b[39m: \u001b[33m'\u001b[39m\u001b[33m2.0\u001b[39m\u001b[33m'\u001b[39m,\n\u001b[32m      6\u001b[39m     \u001b[33m'\u001b[39m\u001b[33mid\u001b[39m\u001b[33m'\u001b[39m: \u001b[32m1\u001b[39m,\n\u001b[32m   (...)\u001b[39m\u001b[32m     12\u001b[39m     }\n\u001b[32m     13\u001b[39m }\n\u001b[32m     15\u001b[39m json_string = json.dumps(request)\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'requests'"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "import requests\n",
+    "\n",
+    "request = {\n",
+    "    'jsonrpc': '2.0',\n",
+    "    'id': 1,\n",
+    "    'params' : {\n",
+    "        'name': 'weather',\n",
+    "        'arguments': {\n",
+    "            'location': 'San Francisco'\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "json_string = json.dumps(request)\n",
+    "json_string_pretty = json.dumps(request, indent=2)\n",
+    "print(json_string_pretty)\n",
+    "\n",
+    "response = requests.post(\n",
+    "    'example.com',\n",
+    "    json=request\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d5c0f3a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -72,7 +139,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.13.9"
   }
  },
