Notes and examples

--- a/mcp_notes.ipynb
+++ b/mcp_notes.ipynb
@@ -59,6 +59,8 @@
    "source": [
     "# The Communication Protocol\n",
     "\n",
+    "[Resource](https://huggingface.co/learn/mcp-course/en/unit1/communication-protocol)\n",
+    "\n",
     "MCP defines a standardized communication protocol that enables Clients and Servers to exchange messages in a consistent, predictable way. This standardization is critical for interoperability across the community.\n",
     "\n",
     "## JSON-RPC: The Foundation\n",
@@ -82,22 +84,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "3e717144",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'requests'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mjson\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mrequests\u001b[39;00m\n\u001b[32m      4\u001b[39m request = {\n\u001b[32m      5\u001b[39m     \u001b[33m'\u001b[39m\u001b[33mjsonrpc\u001b[39m\u001b[33m'\u001b[39m: \u001b[33m'\u001b[39m\u001b[33m2.0\u001b[39m\u001b[33m'\u001b[39m,\n\u001b[32m      6\u001b[39m     \u001b[33m'\u001b[39m\u001b[33mid\u001b[39m\u001b[33m'\u001b[39m: \u001b[32m1\u001b[39m,\n\u001b[32m   (...)\u001b[39m\u001b[32m     12\u001b[39m     }\n\u001b[32m     13\u001b[39m }\n\u001b[32m     15\u001b[39m json_string = json.dumps(request)\n",
-      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'requests'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import json\n",
     "import requests\n",
@@ -115,21 +105,147 @@
     "\n",
     "json_string = json.dumps(request)\n",
     "json_string_pretty = json.dumps(request, indent=2)\n",
-    "print(json_string_pretty)\n",
+    "print(json_string_pretty)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3d5c0f3a",
+   "metadata": {},
+   "source": [
+    "### Responses\n",
     "\n",
-    "response = requests.post(\n",
-    "    'example.com',\n",
-    "    json=request\n",
-    ")"
+    "Sent from Server to Client in reply ot a Request. A Response message includes:\n",
+    "* The same `id` as the corresponding Request\n",
+    "* Either a `result` (for success) or and `error` (for failure)\n",
+    "\n",
+    "Example Success Response:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3d5c0f3a",
+   "execution_count": 6,
+   "id": "c76eb62f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"jsonrpc\": \"2.0\",\n",
+      "  \"id\": 1,\n",
+      "  \"result\": {\n",
+      "    \"temperature\": 62,\n",
+      "    \"conditions\": \"Partly cloudy\"\n",
+      "  }\n",
+      "}\n"
+     ]
+    }
+   ],
+   "source": [
+    "response = {\n",
+    "  \"jsonrpc\": \"2.0\",\n",
+    "  \"id\": 1,\n",
+    "  \"result\": {\n",
+    "    \"temperature\": 62,\n",
+    "    \"conditions\": \"Partly cloudy\"\n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "json_string = json.dumps(response)\n",
+    "json_string_pretty = json.dumps(response, indent=2)\n",
+    "print(json_string_pretty)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c4bbd864",
+   "metadata": {},
+   "source": [
+    "Example Error Response:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "e5b91f17",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'jsonrpc': '2.0',\n",
+       " 'id': 1,\n",
+       " 'error': {'code': -32602, 'message': 'Invalid location parameter'}}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "{\n",
+    "  \"jsonrpc\": \"2.0\",\n",
+    "  \"id\": 1,\n",
+    "  \"error\": {\n",
+    "    \"code\": -32602,\n",
+    "    \"message\": \"Invalid location parameter\"\n",
+    "  }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "18680a99",
+   "metadata": {},
+   "source": [
+    "### Notifications\n",
+    "One-way messages that don’t require a response. Typically sent from Server to Client to provide updates or notifications about events.\n",
+    "\n",
+    "Example Notification:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "70ff824a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'jsonrpc': '2.0',\n",
+       " 'method': 'progress',\n",
+       " 'params': {'message': 'Processing data...', 'percent': 50}}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "{\n",
+    "  \"jsonrpc\": \"2.0\",\n",
+    "  \"method\": \"progress\",\n",
+    "  \"params\": {\n",
+    "    \"message\": \"Processing data...\",\n",
+    "    \"percent\": 50\n",
+    "  }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "201f0244",
+   "metadata": {},
+   "source": [
+    "## Transport Mechanisms\n",
+    "\n",
+    "JSON-RPC defines the message format, but MCP also specifies how these messages are transported between Clients and Servers. Two primary transport mechanisms are supported."
+   ]
   }
  ],
  "metadata": {
