--- a/mcp_notes.ipynb
+++ b/mcp_notes.ipynb
@@ -244,7 +244,39 @@
    "source": [
     "## Transport Mechanisms\n",
     "\n",
-    "JSON-RPC defines the message format, but MCP also specifies how these messages are transported between Clients and Servers. Two primary transport mechanisms are supported."
+    "JSON-RPC defines the message format, but MCP also specifies how these messages are transported between Clients and Servers. Two primary transport mechanisms are supported.\n",
+    "\n",
+    "### stdio (Standard Input/Output)\n",
+    "\n",
+    "The stdio transport is used for local communication, where the Client and Server run on the same machine:\n",
+    "\n",
+    "The Host application launches the Server as a subprocess and communicates with it by writing to its standard input (stdin) and reading from its standard output (stdout).\n",
+    "\n",
+    "Use cases for this transport are local tools like file system access or running local scripts.\n",
+    "\n",
+    "The main Advantages of this transport are that it’s simple, no network configuration required, and securely sandboxed by the operating system.\n",
+    "\n",
+    "### HTTP + SSE (Server-Sent Events) / Streamable HTTP\n",
+    "\n",
+    "The HTTP+SSE transport is used for remote communication, where the Client and Server might be on different machines:\n",
+    "\n",
+    "Communication happens over HTTP, with the Server using Server-Sent Events (SSE) to push updates to the Client over a persistent connection.\n",
+    "\n",
+    "Use cases for this transport are connecting to remote APIs, cloud services, or shared resources.\n",
+    "\n",
+    "The main Advantages of this transport are that it works across networks, enables integration with web services, and is compatible with serverless environments.\n",
+    "\n",
+    "Recent updates to the MCP standard have introduced or refined “Streamable HTTP,” which offers more flexibility by allowing servers to dynamically upgrade to SSE for streaming when needed, while maintaining compatibility with serverless environments.\n",
+    "\n",
+    "Find notes on the **Interaction Lifecycle** [here](https://huggingface.co/learn/mcp-course/en/unit1/communication-protocol#the-interaction-lifecycle)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "49f4e5a4",
+   "metadata": {},
+   "source": [
+    "# Understanding MCP Capabilities"
    ]
   }
  ],
