--- a/mcp_notes.ipynb
+++ b/mcp_notes.ipynb
@@ -276,7 +276,48 @@
    "id": "49f4e5a4",
    "metadata": {},
    "source": [
-    "# Understanding MCP Capabilities"
+    "# Understanding MCP Capabilities\n",
+    "\n",
+    "MCP Servers expose a variety of capabilities to Clients through the communication protocol. These capabilities fall into four main categories.\n",
+    "\n",
+    "## Tools\n",
+    "\n",
+    "Tools are executable functions or actions that the AI model can invoke through the MCP protocol\n",
+    "* **Control:** Tools are typically **model-controlled**, meaning that the LLM decides when to call them based on the user's request and context.\n",
+    "* **Safety:** Due to their ability to perform actions with side effects, tool execution can be dangerous. Therefore, they typically require explicit user approval.\n",
+    "* **Use Cases:** Sending messages, creating tickets, querying APIs, performing calculations.\n",
+    "\n",
+    "**Example:** A weather tool that fetches current weather data for a given location:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "b04cb025",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_weather(location: str) -> dict:\n",
+    "    \"\"\"Get the current weather for a specified location.\"\"\"\n",
+    "    return {\n",
+    "        \"temperature\": 72,\n",
+    "        \"conditions\": \"Sunny\",\n",
+    "        \"humidity\": 45\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec74e9b2",
+   "metadata": {},
+   "source": [
+    "## Resources\n",
+    "\n",
+    "Resources provide read-only access to data sources, allowing the AI model to retrieve context without executing complex logic.\n",
+    "* **Control:** Resources are **application-controlled**, meaning the Host application typically decides when to access them.\n",
+    "* **Nature:** They are designed for data retrieval with minimal computation, similar to GET endpoints in REST APIs.\n",
+    "* **Safety:** Since they are read-only, they typically present lower security risks than Tools.\n",
+    "* **Use Cases:** Accessing file contents, retrieving database records, reading configuration information."
    ]
   }
  ],
