--- a/mcp_notes.ipynb
+++ b/mcp_notes.ipynb
@@ -317,8 +317,68 @@
     "* **Control:** Resources are **application-controlled**, meaning the Host application typically decides when to access them.\n",
     "* **Nature:** They are designed for data retrieval with minimal computation, similar to GET endpoints in REST APIs.\n",
     "* **Safety:** Since they are read-only, they typically present lower security risks than Tools.\n",
-    "* **Use Cases:** Accessing file contents, retrieving database records, reading configuration information."
+    "* **Use Cases:** Accessing file contents, retrieving database records, reading configuration information.\n",
+    "\n",
+    "**Example:** A resource that provides access to file contents:"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "5b629114",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def read_file(file_path: str) -> str:\n",
+    "    \"\"\"Read the contents of a file at the specified path.\"\"\"\n",
+    "    with open(file_path, 'r') as f:\n",
+    "        return f.read()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "19c7ea45",
+   "metadata": {},
+   "source": [
+    "## Prompts\n",
+    "\n",
+    "Prompts are predefined templates or workflows that guide the interaction between the user, the AI model, and the Server's capabilities.\n",
+    "* **Control:** Prompts are user-controlled, often presented as options in the Host application's UI.\n",
+    "* **Purpose:** They structure interactions for optimal use of available Tools and Resources.\n",
+    "* **Selection:** Users typically select a prompt before the AI model begins processing, setting context for the interaction.\n",
+    "* **Use Cases:** Common workflows, specialized task templates, guided interactions.\n",
+    "\n",
+    "**Example:** A prompt template for generating a code review:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "576e19da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def code_review(code: str, language: str) -> list:\n",
+    "    \"\"\"Generate a code review for the provided code snippet.\"\"\"\n",
+    "    return [\n",
+    "        {\n",
+    "            \"role\": \"system\",\n",
+    "            \"content\": f\"You are a code reviewer examining {language} code. Provide a detailed review highlighting best practices, potential issues, and suggestions for improvement.\"\n",
+    "        },\n",
+    "        {\n",
+    "            \"role\": \"user\",\n",
+    "            \"content\": f\"Please review this {language} code:\\n\\n```{language}\\n{code}\\n```\"\n",
+    "        }\n",
+    "    ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d29ca84",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
