--- a/mcp_notes.ipynb
+++ b/mcp_notes.ipynb
@@ -373,12 +373,60 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "1d29ca84",
    "metadata": {},
+   "source": [
+    "## Sampling\n",
+    "\n",
+    "Sampling allows Servers to request the Client (specifically, the Host application) to perform LLM interactions.\n",
+    "* **Control:** Sampling is server-initiated, but requires Client/Host facilitation.\n",
+    "* **Purpose:** It enables server-driven agentic behaviors and potentially recursive or multi-step interactions.\n",
+    "* **Safety:** Like Tools, sampling operations typically require user approval.\n",
+    "* **Use Cases:**. Complex multi-step tasks, autonomous agent workflows, interactive processes.\n",
+    "\n",
+    "**Example:** A Server might request the Client to analyze data it has processed:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "fea1b855",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def request_sampling(messages, system_prompt=None, include_context=\"none\"):\n",
+    "    \"\"\"Request LLM sampling from the client.\"\"\"\n",
+    "    # In a real implementation, this would send a request to the client\n",
+    "    return {\n",
+    "        \"role\": \"assistant\",\n",
+    "        \"content\": \"Analysis of the provided data...\"\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "94738df7",
+   "metadata": {},
+   "source": [
+    "The sampling flow follows these steps:\n",
+    "1. Server sends a sampling/createMessage request to the client\n",
+    "1. Client reviews the request and can modify it\n",
+    "1. Client samples from an LLM\n",
+    "1. Client reviews the completion\n",
+    "1. Client returns the result to the server\n",
+    "\n",
+    "Refer to [this page](https://huggingface.co/learn/mcp-course/en/unit1/capabilities?resource-example=python&prompt-example=python#how-capabilities-work-together) for information on how these capabilities work together."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "63306ad2",
+   "metadata": {},
+   "source": [
+    "# Discovery Process\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
