Beginning MCP SDK notes

--- a/mcp_notes.ipynb
+++ b/mcp_notes.ipynb
@@ -425,7 +425,11 @@
    "metadata": {},
    "source": [
     "# Discovery Process\n",
-    "\n"
+    "\n",
+    "One of MCP's key features is dynamic capability discovery. hen a Client connects to a server, it can query the available Tools, Resources, and Prompts through specific list methods:\n",
+    "* `tools/list`: Discover available Tools\n",
+    "* `resources/list`: Discover available Resources\n",
+    "* `prompts/list`: Discover available Prompts"
    ]
   }
  ],
