--- a/mcp_notes.ipynb
+++ b/mcp_notes.ipynb
@@ -431,6 +431,29 @@
     "* `resources/list`: Discover available Resources\n",
     "* `prompts/list`: Discover available Prompts"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cc541967",
+   "metadata": {},
+   "source": [
+    "# MCP SDK\n",
+    "\n",
+    "A Software Development Kit (SDK) helps software developers create applications for a specific platform, system, or programming language. Think of it kind of like a toolkit for app development. Typically, a basic SDK will include a compiler, debugger, and APIs.\n",
+    "\n",
+    "The MCP provides official SDKs for both JavaScript, Python and other languages. This makes it easy to implement MCP clients and servers in applications. These SDKs handle the low-level protocol details.\n",
+    "\n",
+    "## SDK Overview\n",
+    "\n",
+    "Both SDKs provide similar core functionality, following the MCP protocol specification we discussed earlier. They handle:\n",
+    "* Protocol-level communication\n",
+    "* Capability registration and discovery\n",
+    "* Message serialization/deserialization\n",
+    "* Connection management\n",
+    "* Error handling\n",
+    "\n",
+    "## Core Primitives Implementation\n"
+   ]
   }
  ],
  "metadata": {
