Installing prerequisites for mcp server.py

--- a/mcp_notes.ipynb
+++ b/mcp_notes.ipynb
@@ -84,10 +84,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "3e717144",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"jsonrpc\": \"2.0\",\n",
+      "  \"id\": 1,\n",
+      "  \"params\": {\n",
+      "    \"name\": \"weather\",\n",
+      "    \"arguments\": {\n",
+      "      \"location\": \"San Francisco\"\n",
+      "    }\n",
+      "  }\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "import json\n",
     "import requests\n",
@@ -124,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "c76eb62f",
    "metadata": {},
    "outputs": [
@@ -168,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "e5b91f17",
    "metadata": {},
    "outputs": [
@@ -180,7 +197,7 @@
        " 'error': {'code': -32602, 'message': 'Invalid location parameter'}}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "70ff824a",
    "metadata": {},
    "outputs": [
@@ -221,7 +238,7 @@
        " 'params': {'message': 'Processing data...', 'percent': 50}}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "b04cb025",
    "metadata": {},
    "outputs": [],
@@ -324,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "5b629114",
    "metadata": {},
    "outputs": [],
@@ -353,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "576e19da",
    "metadata": {},
    "outputs": [],
@@ -390,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "fea1b855",
    "metadata": {},
    "outputs": [],
@@ -452,7 +469,81 @@
     "* Connection management\n",
     "* Error handling\n",
     "\n",
-    "## Core Primitives Implementation\n"
+    "## Core Primitives Implementation\n",
+    "\n",
+    "Now we're gonna explore how to implement each of the core primitives (Tools, Resources, and Prompts) using both SDKs.\n",
+    "\n",
+    "(Also, I'm going back to using double quotes. I like double quotes.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "044a5e7c",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "Already running asyncio in this thread",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mRuntimeError\u001b[39m                              Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[9]\u001b[39m\u001b[32m, line 25\u001b[39m\n\u001b[32m     23\u001b[39m \u001b[38;5;66;03m# Run the server\u001b[39;00m\n\u001b[32m     24\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[34m__name__\u001b[39m == \u001b[33m\"\u001b[39m\u001b[33m__main__\u001b[39m\u001b[33m\"\u001b[39m:\n\u001b[32m---> \u001b[39m\u001b[32m25\u001b[39m     \u001b[43mmcp\u001b[49m\u001b[43m.\u001b[49m\u001b[43mrun\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/hugging-face-notes/hugging-env/lib/python3.13/site-packages/mcp/server/fastmcp/server.py:282\u001b[39m, in \u001b[36mFastMCP.run\u001b[39m\u001b[34m(self, transport, mount_path)\u001b[39m\n\u001b[32m    280\u001b[39m \u001b[38;5;28;01mmatch\u001b[39;00m transport:\n\u001b[32m    281\u001b[39m     \u001b[38;5;28;01mcase\u001b[39;00m \u001b[33m\"\u001b[39m\u001b[33mstdio\u001b[39m\u001b[33m\"\u001b[39m:\n\u001b[32m--> \u001b[39m\u001b[32m282\u001b[39m         \u001b[43manyio\u001b[49m\u001b[43m.\u001b[49m\u001b[43mrun\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mrun_stdio_async\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    283\u001b[39m     \u001b[38;5;28;01mcase\u001b[39;00m \u001b[33m\"\u001b[39m\u001b[33msse\u001b[39m\u001b[33m\"\u001b[39m:\n\u001b[32m    284\u001b[39m         anyio.run(\u001b[38;5;28;01mlambda\u001b[39;00m: \u001b[38;5;28mself\u001b[39m.run_sse_async(mount_path))\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/hugging-face-notes/hugging-env/lib/python3.13/site-packages/anyio/_core/_eventloop.py:59\u001b[39m, in \u001b[36mrun\u001b[39m\u001b[34m(func, backend, backend_options, *args)\u001b[39m\n\u001b[32m     57\u001b[39m     \u001b[38;5;28;01mpass\u001b[39;00m\n\u001b[32m     58\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m---> \u001b[39m\u001b[32m59\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mAlready running \u001b[39m\u001b[38;5;132;01m{\u001b[39;00masynclib_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m in this thread\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     61\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m     62\u001b[39m     async_backend = get_async_backend(backend)\n",
+      "\u001b[31mRuntimeError\u001b[39m: Already running asyncio in this thread"
+     ]
+    }
+   ],
+   "source": [
+    "from mcp.server import FastMCP\n",
+    "\n",
+    "mcp = FastMCP('Weather Service')\n",
+    "\n",
+    "# Tool implementation\n",
+    "@mcp.tool()\n",
+    "def get_weather(location: str) -> str:\n",
+    "    \"\"\"Get the current weather for a specified location.\"\"\"\n",
+    "    return f\"Weather in {location}: Sunny, 72°F\"\n",
+    "\n",
+    "# Resource implementation\n",
+    "@mcp.resource(\"weather://{location}\")\n",
+    "def weather_resource(location: str) -> str:\n",
+    "    \"\"\"Provide weather data as a resource.\"\"\"\n",
+    "    return f\"Weather data for {location}: Sunny, 72°F\"\n",
+    "\n",
+    "# Prompt implementation\n",
+    "@mcp.prompt()\n",
+    "def weather_report(location: str) -> str:\n",
+    "    \"\"\"Create a weather report prompt\"\"\"\n",
+    "    return f\"\"\"You are a weather reporter. Weather report for {location}?\"\"\"\n",
+    "\n",
+    "# Run the server\n",
+    "if __name__ == \"__main__\":\n",
+    "    mcp.run()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0f00bbbe",
+   "metadata": {},
+   "source": [
+    "Once you have your server implemented, you can start it running the server script.\n",
+    "\n",
+    "```mcp dev server.py```\n",
+    "\n",
+    "This will initialize a development server running the file `sever.py`. And log the following output:\n",
+    "\n",
+    "```Starting MCP inspector...\n",
+    "⚙️ Proxy server listening on port 6277\n",
+    "Spawned stdio transport\n",
+    "Connected MCP client to backing server transport\n",
+    "Created web app transport\n",
+    "Set up MCP proxy\n",
+    "🔍 MCP Inspector is up and running at http://127.0.0.1:6274 🚀```\n",
+    "\n",
+    "You can then open the MCP Inspector at http://127.0.0.1:6274 to see the server's capabilities and interact with them."
    ]
   }
  ],
