--- a/mcp_notes.ipynb
+++ b/mcp_notes.ipynb
@@ -595,11 +595,138 @@
     "      \"name\": \"Server Name\",\n",
     "      \"transport\": {\n",
     "        \"type\": \"stdio|sse\",\n",
-    "        // Transport-specific configuration\n",
+    "        # Transport-specific configuration\n",
     "      }\n",
     "    }\n",
     "  ]\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "901ca3d5",
+   "metadata": {},
+   "source": [
+    "In this example, we have a single server with a name and a transport type. The transport type is either `studio` or `sse`.\n",
+    "\n",
+    "**Configuration for stdio Transport**\n",
+    "\n",
+    "For local servers using stdio transport, the configuration includes the command and arguments to launch the server process:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3ed6a5a8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "{\n",
+    "  \"servers\": [\n",
+    "    {\n",
+    "      \"name\": \"File Explorer\",\n",
+    "      \"transport\": {\n",
+    "        \"type\": \"stdio\",\n",
+    "        \"command\": \"python\",\n",
+    "        \"args\": [\"/path/to/file_explorer_server.py\"] // This is an example, we'll use a real server in the next unit\n",
+    "      }\n",
+    "    }\n",
+    "  ]\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9a843122",
+   "metadata": {},
+   "source": [
+    "Here, we have a server called \"File Explorer\" that is a local script.\n",
+    "\n",
+    "**Configuration for HTTP+SSE Transport**\n",
+    "\n",
+    "For remote servers using HTTP+SSE transport, the configuration includes the server URL:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cd31586d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "{\n",
+    "  \"servers\": [\n",
+    "    {\n",
+    "      \"name\": \"Remote API Server\",\n",
+    "      \"transport\": {\n",
+    "        \"type\": \"sse\",\n",
+    "        \"url\": \"https://example.com/mcp-server\"\n",
+    "      }\n",
+    "    }\n",
+    "  ]\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "07dde1f1",
+   "metadata": {},
+   "source": [
+    "**Environment Variables Configuration**\n",
+    "\n",
+    "In Python, we use the `os` module to access environment variables:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9139ce58",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "# Access environment variables\n",
+    "github_token = os.environ.get(\"GITHUB_TOKEN\")\n",
+    "if not github_token:\n",
+    "    raise ValueError(\"GITHUB_TOKEN environment variable is required\")\n",
+    "\n",
+    "# Use the token in your server code\n",
+    "def make_github_request():\n",
+    "    headers = {\"Authorization\": f\"Bearer {github_token}\"}\n",
+    "    # ... rest of your code"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f94fdb7",
+   "metadata": {},
+   "source": [
+    "The corresponding configuration in `mcp.json` would look like this:\n",
+    "\n",
+    "```{\n",
+    "  \"servers\": [\n",
+    "    {\n",
+    "      \"name\": \"GitHub API\",\n",
+    "      \"transport\": {\n",
+    "        \"type\": \"stdio\",\n",
+    "        \"command\": \"python\",\n",
+    "        \"args\": [\"/path/to/github_server.py\"], // This is an example, we'll use a real server in the next unit\n",
+    "        \"env\": {\n",
+    "          \"GITHUB_TOKEN\": \"your_github_token\"\n",
+    "        }\n",
+    "      }\n",
+    "    }\n",
+    "  ]\n",
+    "}```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9910f16c",
+   "metadata": {},
+   "source": [
+    "Go to [this link](https://huggingface.co/learn/mcp-course/en/unit1/mcp-clients#configuration-examples) for configuration examples."
    ]
   }
  ],
