--- a/mcp_notes.ipynb
+++ b/mcp_notes.ipynb
@@ -728,6 +728,34 @@
    "source": [
     "Go to [this link](https://huggingface.co/learn/mcp-course/en/unit1/mcp-clients#configuration-examples) for configuration examples."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b1d3c62c",
+   "metadata": {},
+   "source": [
+    "# Tiny Agents Clients\n",
+    "\n",
+    "Let's explore how to use MCP Clients within code.\n",
+    "\n",
+    "You can also use tiny agents as MCP Clients to connect directly to MCP servers from your code. Tiny agents provide a simple way to create AI agents that can use tools from MCP servers.\n",
+    "\n",
+    "Tiny Agent can run MCP servers with a command line environment.\n",
+    "\n",
+    "## Setup\n",
+    "\n",
+    "First, we will need to install `npx` with the following command:\n",
+    "\n",
+    "```npm install -g npx```\n",
+    "\n",
+    "Then, we will need to install the huggingface_hub package with the MCP support. This will allow us to run MCP servers and clients.\n",
+    "\n",
+    "```pip install \"huggingface_hub[mcp]>=0.32.0\"```\n",
+    "\n",
+    "Then, we will need to log in to the Hugging Face Hub to access the MCP servers. You can do this with the `huggingface-cli` command line tool. You will need a [login token](https://huggingface.co/docs/huggingface_hub/v0.32.3/en/quick-start#authentication) to do this.\n",
+    "\n",
+    "```huggingface-cli login```"
+   ]
   }
  ],
  "metadata": {
